Initial changes for webapi

--- a/.gitignore
+++ b/.gitignore
@@ -22,11 +22,13 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+.config/
 
 # .NET Core
 project.lock.json
 project.fragment.lock.json
 artifacts/
+.vs/
 
 # ASP.NET Scaffolding
 ScaffoldingReadMe.txt
